Fix reponsiveness on iPhone 6s

--- a/php/load/main.css
+++ b/php/load/main.css
@@ -22,7 +22,7 @@ h1,h2,h3,h4{
 div#main{
 	border: 1px solid black;
 	margin:auto;
-	min-width: 400px;
+	min-width: 350px;
 	max-width: 1600px;
 	background-color: white;
 	padding: 5px;
@@ -68,7 +68,7 @@ div#logoutbox{
 
 table.accounttable, .form-group, .list-group{
 	width: 100%;
-	min-width: 395px;
+	min-width: 345px;
 	max-width: 800px;
 }
 table.accounttable th {
